--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,12 +67,15 @@
   margin-bottom: 4em;
 }
 
-/* Login Form */
+/* Login/reg Form */
+
 /* h1 {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
 } */
+
 .login, .register {
+  padding-top: 1em;
+  margin: 1em;
   border: solid 1px rgb(227 123 45 / 23%);
   border-radius: 5px;
   background-color: rgb(150 179 232);
