--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,16 @@
-
+html {
+  background-color: orangered;
+}
 
 .App {
   text-align: center;
-  background-color: rgb(142 205 140);
+  background-color: orangered;
+  /* background-color: rgb(142 205 140); */
+  
   font-family: 'Source Serif Pro', serif;
   letter-spacing: 0.05em;
-  color: orangered;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  /* color: orangered; */
+  /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
 }
 
 .App-logo {
@@ -75,10 +79,46 @@
 
 .login, .register {
   padding-top: 1em;
-  margin: 1em;
-  border: solid 1px rgb(227 123 45 / 23%);
-  border-radius: 5px;
+  margin: 3em;
+  margin-top: 6em;
+  border: solid 1px rgba(255, 255, 255, 0.789);
+  border-radius: 8px;
   background-color: rgb(150 179 232);
-  box-shadow: 0px 0px 40px 20px rgb(151 173 242);
-  text-shadow: none;
+  color: azure;
+  box-shadow: 0px 0px 20px 20px rgb(150 179 232), 0px 0px 88px 34px rgb(0 255 40);
+  /*  */
+  text-shadow: 0 0 20px rgba(0, 0, 255, 0.558);
 }
+
+/* form shadow hover */
+
+/* Pre-render the bigger shadow, but hide it */
+.login::after {
+  color: #282c34;
+  border: solid 1px rgba(255, 255, 255, 0.789);
+  border-radius: 8px;
+  background-color: rgb(150 179 232);
+  color: azure;
+  box-shadow: 0px 0px 20px 20px rgb(150 179 232), 0px 0px 88px 34px rgb(0 255 40);
+  /*  */
+  text-shadow: 0 0 20px rgba(0, 0, 255, 0.558);
+  transition: all 0.3s ease-in-out;
+}
+
+.login:hover {
+  transform: scale(1.01, 1.01);
+  transition: box-shadow 1s ease-in-out, transform 0.3s ease-in-out, color 2s ease-in-out, border 0.3s ease-in-out;
+  color: rgb(255, 0, 0);
+  border: solid 1px rgba(0, 0, 0, 0.789);
+  background-color: rgb(150, 184, 232);
+  box-shadow: 0px 0px 20px 10px rgb(91 121 177), 0px 0px 54px 20px rgb(0 219 51);
+  /*  */
+}
+
+.login:hover::after {
+  opacity: 1;
+  transition: 0.5s ease-in-out;
+  
+}
+
+
