--- a/client/src/App.css
+++ b/client/src/App.css
@@ -73,9 +73,6 @@ html {
 
 /* Login/reg Form */
 
-/* h1 {
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-} */
 
 .login, .register {
   padding-top: 1em;
@@ -87,7 +84,11 @@ html {
   color: azure;
   box-shadow: 0px 0px 20px 20px rgb(150 179 232), 0px 0px 88px 34px rgb(0 255 40);
   /*  */
-  text-shadow: 0 0 20px rgba(0, 0, 255, 0.558);
+  text-shadow: 0 0 20px rgba(255, 255, 255, 0.558);
+}
+
+.login.btn, .register.btn {
+  border: solid 1px rgb(255, 255, 255);
 }
 
 /* form shadow hover */
@@ -101,24 +102,24 @@ html {
   color: azure;
   box-shadow: 0px 0px 20px 20px rgb(150 179 232), 0px 0px 88px 34px rgb(0 255 40);
   /*  */
-  text-shadow: 0 0 20px rgba(0, 0, 255, 0.558);
+  text-shadow: 0 0 20px rgba(255, 255, 255, 0.558);
   transition: all 0.3s ease-in-out;
 }
 
-.login:hover {
+.login:hover, .register:hover {
   transform: scale(1.01, 1.01);
-  transition: box-shadow 1s ease-in-out, transform 0.3s ease-in-out, color 2s ease-in-out, border 0.3s ease-in-out;
+  transition: box-shadow 1s ease-in-out, transform 0.3s ease-in-out, color 2s ease-in-out, border 0.3s ease-in-out, text-shadow 1.2s ease-in-out;
   color: rgb(255, 0, 0);
   border: solid 1px rgba(0, 0, 0, 0.789);
   background-color: rgb(150, 184, 232);
   box-shadow: 0px 0px 20px 10px rgb(91 121 177), 0px 0px 54px 20px rgb(0 219 51);
+  text-shadow: 0 0 10px rgb(255, 0, 0);
   /*  */
 }
 
-.login:hover::after {
+.login:hover::after, .register:hover::after {
   opacity: 1;
   transition: 0.5s ease-in-out;
-  
 }
 
 
