--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,10 +74,10 @@ html {
 /* Login/reg Form */
 
 
-.login, .register {
+.login, .register, .profileForm {
   padding-top: 1em;
   margin: 3em;
-  margin-top: 6em;
+  margin-top: 2em;
   border: solid 1px rgba(255, 255, 255, 0.789);
   border-radius: 8px;
   background-color: rgb(150 179 232);
@@ -87,14 +87,14 @@ html {
   text-shadow: 0 0 20px rgba(255, 255, 255, 0.558);
 }
 
-.login.btn, .register.btn {
+.login.btn, .register.btn, .profileForm.btn {
   border: solid 1px rgb(255, 255, 255);
 }
 
 /* form shadow hover */
 
 /* Pre-render the bigger shadow, but hide it */
-.login::after {
+.login::after, .register::after, .profileForm::after {
   color: #282c34;
   border: solid 1px rgba(255, 255, 255, 0.789);
   border-radius: 8px;
@@ -106,10 +106,10 @@ html {
   transition: all 0.3s ease-in-out;
 }
 
-.login:hover, .register:hover {
+.login:hover, .register:hover, .profileForm:hover {
   transform: scale(1.01, 1.01);
   transition: box-shadow 1s ease-in-out, transform 0.3s ease-in-out, color 2s ease-in-out, border 0.3s ease-in-out, text-shadow 1.2s ease-in-out;
-  color: rgb(255, 0, 0);
+  color: orangered;
   border: solid 1px rgba(0, 0, 0, 0.789);
   background-color: rgb(150, 184, 232);
   box-shadow: 0px 0px 20px 10px rgb(91 121 177), 0px 0px 54px 20px rgb(0 219 51);
@@ -117,7 +117,7 @@ html {
   /*  */
 }
 
-.login:hover::after, .register:hover::after {
+.login:hover::after, .register:hover::after, .profileForm:hover::after {
   opacity: 1;
   transition: 0.5s ease-in-out;
 }
