--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 html {
-  background-color: orangered;
+  /* background-color: orangered; */
+  background-color: rgb(142 205 140);
 }
 
 .App {
@@ -51,7 +52,8 @@ html {
 /* Nav Bar */
 
 .navbar {
-  background-color: orangered;
+  /* background-color: orangered; */
+  background-color: rgb(142 205 140);
   border-bottom: solid 1px black;
   text-shadow: none;
 }
