--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,12 @@
 html {
-  background-color: orangered;
+  /* background-color: orangered; */
+  background-color: rgb(255, 182, 155);
 }
 
 .App {
   text-align: center;
-  background-color: orangered;
+  /* background-color: orangered; */
+  background-color: rgb(255, 182, 155);
   /* background-color: rgb(142 205 140); */
   
   font-family: 'Source Serif Pro', serif;
