--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,7 +53,7 @@ html {
 /* Nav Bar */
 
 .navbar {
-  background-color: orangered;
+  background-color: rgb(251, 251, 251);
   border-bottom: solid 1px black;
   text-shadow: none;
 }
