--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,12 @@
 html {
   /* background-color: orangered; */
-  background-color: rgb(255, 182, 155);
+  background-color: orangered;
 }
 
 .App {
   text-align: center;
   /* background-color: orangered; */
-  background-color: rgb(255, 182, 155);
+  background-color: orangered;
   /* background-color: rgb(142 205 140); */
   
   font-family: 'Source Serif Pro', serif;
@@ -41,19 +41,10 @@ html {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 /* Nav Bar */
 
 .navbar {
-  background-color: rgb(251, 251, 251);
+  background-color: orangered;
   border-bottom: solid 1px black;
   text-shadow: none;
 }
