--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,8 +80,10 @@ html {
   text-shadow: 0 0 20px rgba(255, 255, 255, 0.558);
 }
 
-.login.btn, .register.btn, .profileForm.btn {
+.login.btn, .register.btn, .profileForm.btn, .btn {
   border: solid 1px rgb(255, 255, 255);
+  border-radius: 10px;
+  color: azure;
 }
 
 /* form shadow hover */
@@ -116,3 +118,21 @@ html {
 }
 
 
+/* posts form */
+
+.postForm {
+  padding-top: 1em;
+  margin: 1em;
+  margin-top: 1em;
+  border: solid 1px rgba(255, 255, 255, 0.789);
+  border-radius: 8px;
+  background-color: orangered;
+  color: azure;
+  box-shadow: 0px 0px 20px 20px rgb(0, 89, 255), 0px 0px 88px 34px rgb(144, 0, 255);
+  /*  */
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.558);
+}
+
+.postForm.h1, .postForm.h2 {
+  color: azure;
+}
