--- a/client/src/App.css
+++ b/client/src/App.css
@@ -121,14 +121,16 @@ html {
 /* posts form */
 
 .postForm {
+  max-width: 100px;
   padding-top: 1em;
+  padding-bottom: 1em;
   margin: 1em;
   margin-top: 1em;
   border: solid 1px rgba(255, 255, 255, 0.789);
   border-radius: 8px;
   background-color: orangered;
   color: azure;
-  box-shadow: 0px 0px 20px 20px rgb(0, 89, 255), 0px 0px 88px 34px rgb(144, 0, 255);
+  box-shadow: 0px 0px 20px 20px rgba(0, 89, 255, 0.219), 0px 0px 88px 34px rgba(144, 0, 255, 0.324);
   /*  */
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.558);
 }
