Your commit message

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -121,7 +121,11 @@ html {
 /* posts form */
 
 .postForm {
-  max-width: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  max-width: 300px;
   padding-top: 1em;
   padding-bottom: 1em;
   margin: 1em;
