Your commit message

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -121,7 +121,7 @@ html {
 /* posts form */
 
 .postForm {
-  display: block;
+  display: flex;
   margin-left: auto;
   margin-right: auto;
   width: 40%;
