--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,8 +68,8 @@ html {
 
 
 .login, .register, .profileForm {
-  max-width: 20vw;
-  padding-top: 1em;
+  max-width: 70vw;
+  padding: 1em;
   margin: 3em;
   margin-top: 2em;
   border: solid 1px rgba(255, 255, 255, 0.789);
@@ -122,8 +122,8 @@ html {
 /* posts form */
 
 .postForm {
-  max-width: 20vw;
-  padding-top: 1em;
+  max-width: 60vw;
+  padding: 1em;
   padding-bottom: 1em;
   margin: 1em;
   margin-top: 1em;
