--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,8 +68,11 @@ html {
 
 
 .login, .register, .profileForm {
-  max-width: 70vw;
+  width: 70vw;
+  max-width: 500px;
   padding: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
   margin: 3em;
   margin-top: 2em;
   border: solid 1px rgba(255, 255, 255, 0.789);
@@ -122,7 +125,8 @@ html {
 /* posts form */
 
 .postForm {
-  max-width: 60vw;
+  width: 60vw;
+  max-width: 500px;
   padding: 1em;
   padding-bottom: 1em;
   margin: 1em;
