--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,7 +84,7 @@ html {
   text-shadow: 0 0 20px rgba(255, 255, 255, 0.558);
 }
 
-.login.btn, .register.btn, .profileForm.btn, .btn {
+.login.btn, .register.btn, .profileForm.btn {
   border: solid 1px rgb(255, 255, 255);
   border-radius: 10px;
   color: azure;
@@ -131,15 +131,21 @@ html {
   padding-bottom: 1em;
   margin: 1em;
   margin-top: 1em;
-  border: solid 1px rgba(255, 255, 255, 0.789);
-  border-radius: 8px;
-  background-color: orangered;
+  border: solid 1px rgba(0, 0, 0, 0.789);
+  border-radius: 10px;
+  background-color: hex#b1d5a8;
   color: azure;
-  box-shadow: 0px 0px 20px 20px rgba(0, 89, 255, 0.219), 0px 0px 88px 34px rgba(144, 0, 255, 0.324);
+  box-shadow: 0px 0px 20px 20px hex#b1d5a8, 0px 0px 88px 34px rgba(35, 105, 255, 0.324);
   /*  */
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.558);
 }
 
 .postForm.h1, .postForm.h2 {
   color: azure;
+}
+
+.postForm.btn {
+  border: solid 1px rgb(0, 0, 0);
+  border-radius: 10px;
+  color: rgb(0, 0, 0);
 }
