--- a/client/src/App.css
+++ b/client/src/App.css
@@ -125,6 +125,7 @@ html {
 /* posts form */
 
 .postForm {
+  color: black;
   width: 60vw;
   max-width: 500px;
   padding: 1em;
@@ -133,19 +134,15 @@ html {
   margin-top: 1em;
   border: solid 1px rgba(0, 0, 0, 0.789);
   border-radius: 10px;
-  background-color: hex#b1d5a8;
-  color: azure;
-  box-shadow: 0px 0px 20px 20px hex#b1d5a8, 0px 0px 88px 34px rgba(35, 105, 255, 0.324);
+  background-color:#b1d5a8;
+  box-shadow: 0px 0px 20px 20px #b1d5a8d8, 0px 0px 88px 34px rgba(35, 105, 255, 0.324);
   /*  */
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.558);
 }
 
-.postForm.h1, .postForm.h2 {
-  color: azure;
-}
 
 .postForm.btn {
-  border: solid 1px rgb(0, 0, 0);
+  border: solid 1px black;
   border-radius: 10px;
   color: rgb(0, 0, 0);
 }
