--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,7 +84,7 @@ html {
   text-shadow: 0 0 20px rgba(255, 255, 255, 0.558);
 }
 
-.login.btn, .register.btn, .profileForm.btn {
+.login.btn, .register.btn, .profileForm.btn, .btn {
   border: solid 1px rgb(255, 255, 255);
   border-radius: 10px;
   color: azure;
@@ -135,7 +135,7 @@ html {
   border: solid 1px rgba(0, 0, 0, 0.789);
   border-radius: 10px;
   background-color:#b1d5a8;
-  box-shadow: 0px 0px 20px 20px #b1d5a8d8, 0px 0px 88px 34px rgba(35, 105, 255, 0.324);
+  box-shadow: 0px 0px 20px 20px #b1d5a8d8, 0px 0px 88px 34px rgb(166 207 210);
   /*  */
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.558);
 }
@@ -144,5 +144,5 @@ html {
 .postForm.btn {
   border: solid 1px black;
   border-radius: 10px;
-  color: rgb(0, 0, 0);
+  color: black;
 }
