Your commit message

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -140,9 +140,9 @@ html {
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.558);
 }
 
-
+/* 
 .postForm.btn {
   border: solid 1px black;
   border-radius: 10px;
   color: black;
-}
+} */
