--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,6 +75,7 @@ html {
   padding-right: 2em;
   margin: 3em;
   margin-top: 2em;
+  margin-bottom: 3em;
   border: solid 1px rgba(255, 255, 255, 0.789);
   border-radius: 8px;
   background-color: rgb(150 179 232);
@@ -140,7 +141,8 @@ html {
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.558);
 }
 
-.deletebtn {
+.postForm.btn {
+  /* background-color: rgba(177, 213, 168, 0); */
   border: solid 1px rgb(151, 55, 55);
   text-shadow: 0 0 10px rgb(151, 55, 55);
   border-radius: 10px;
